@@ -1,4 +1,4 @@
-.TH SG_SANITIZE "8" "November 2012" "sg3_utils\-1.35" SG3_UTILS
+.TH SG_SANITIZE "8" "September 2013" "sg3_utils\-1.37" SG3_UTILS
 .SH NAME
 sg_sanitize \- remove all user data from disk with SCSI SANITIZE command
 .SH SYNOPSIS
@@ -22,13 +22,15 @@ data.
 Once a SCSI SANITIZE command has successfully started, then user data from
 that disk is no longer available. Even if the disk is power cycled, the
 sanitize operation will continue after power is re\-instated until it is
-complete. 
+complete.
 .PP
 This utility requires either the \fI\-\-block\fR, \fI\-\-crypto\fR,
-\fI\-\-fail\fR or \fI\-\-overwrite\fR option. If the \fI\-\-quick\fR option
-is not given then the user is given 15 seconds to reconsider whether they
-wish to erase all the data on a disk. The disk's INQUIRY response strings
-are printed out just in case the wrong \fIDEVICE\fR has been given.
+\fI\-\-fail\fR or \fI\-\-overwrite\fR option. With the \fI\-\-block\fR,
+\fI\-\-crypto\fR or \fI\-\-overwrite\fR option the user is given 15 seconds
+to reconsider whether they wish to erase all the data on a disk, unless
+the \fI\-\-quick\fR option is given in which case the sanitize operation
+starts immediately. The disk's INQUIRY response strings are printed out just
+in case the wrong \fIDEVICE\fR has been given.
 .PP
 If the \fI\-\-early\fR option is given this utility will exit soon
 after starting the SANITIZE command with the IMMED bit set. The user can
@@ -69,7 +71,8 @@ option is given this utility will exit "early" as soon as the sanitize
 has commenced. This option and \fI\-\-wait\fR cannot both be given.
 .TP
 \fB\-F\fR, \fB\-\-fail\fR
-perform an "exit failure mode" sanitize operation.
+perform an "exit failure mode" sanitize operation. Typically requires the
+preceding SANITIZE command to have set the AUSE bit.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 print out the usage information then exit.
@@ -102,7 +105,7 @@ pattern must be from 1 to the logical block size of the \fIDEVICE\fR.
 .TP
 \fB\-Q\fR, \fB\-\-quick\fR
 the default action (i.e. when the option is not given) is to give the user
-15 seconds to reconsider doing a sanitize operation on the \fIDEVICE\fR. 
+15 seconds to reconsider doing a sanitize operation on the \fIDEVICE\fR.
 When this option is given that step (i.e. the 15 second warning period)
 is skipped.
 .TP
@@ -128,8 +131,8 @@ cryptographic erase operation could potentially be very quick.]
 .SH NOTES
 The SCSI SANITIZE command is closely related to the ATA SANITIZE command,
 both are relatively new with the ATA command being the first one defined.
-It is likely that a SCSI to ATA Translation (SAT) definition will soon
-appear for the SCSI SANITIZE command (most likely in SAT\-3).
+The SCSI to ATA Translation (SAT) definition for the SCSI SANITIZE command
+appeared in the SAT\-3 revision 4 draft.
 .PP
 The SCSI SANITIZE command is related to the SCSI FORMAT UNIT command. It
 is likely that a block erase sanitize operation would take a similar
@@ -143,7 +146,16 @@ then after power up any remaining user data will not be available and the
 sanitize operation will continue. When a format is interrupted (e.g. the
 disk is power cycled) the drafts say very little about the state of the
 disk. In practice some of the original user data may remain and the format
-may need to be restarted. 
+may need to be restarted.
+.PP
+Finding out whether a disk (SCSI or ATA) supports SANITIZE can be a
+challenge. If the user really needs to find out and no other information
+is available then try 'sg_sanitize \-\-fail \-vvv <device>' and observe
+the sense data returned may be the safest approach. Using the \fI\-\-fail\fR
+variant of this utility should have no effect unless it follows an already
+failed sanitize operation. If the SCSI REPORT SUPPORTED OPERATION CODES
+command (see sg_opcodes) is supported then using it would be a better
+approach for finding if sanitize is supported.
 .SH EXAMPLES
 These examples use Linux device names. For suitable device names in
 other supported Operating Systems see the sg3_utils(8) man page.
@@ -190,7 +202,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2011\-2012 Douglas Gilbert
+Copyright \(co 2011\-2013 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
