@@ -79,7 +79,7 @@ fi
 %{_libdir}/*.la
 
 %changelog
-* Thu Sep 19 2013 - dgilbert at interlog dot com
+* Fri Sep 27 2013 - dgilbert at interlog dot com
 - track t10 changes
   * sg3_utils-1.37
 
