@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.37 [20130923] [svn: r518]
+Changelog for sg3_utils-1.37 [20130927] [svn: r519]
   - sg_compare_and_write: fix wrprotect setting
     - add --quiet option to suppress miscompare report
     - merge features from another implementation
@@ -21,7 +21,8 @@ Changelog for sg3_utils-1.37 [20130923] [svn: r518]
     - add --quiet option
   - sg_xcopy: allow sg and bsg devices
     - fix for bpt going negative
-    - fix for seek in multi segment copies
+    - fix for seek in multi-segment copies
+  - sg_sanitize: skip 15 second safety delay with --fail
   - sg_libs: extended copy opcode renamed (spc4r34)
     - sg_ll_receive_copy_results(): expand for all sa_s
     - add sg_get_sense_key()
